[package]
name = "bmidi-play"
version = "0.0.1"
authors = ["Benedikt Reinartz <filmor@gmail.com>"]

[dependencies]
bmidi = "0.0.2"
synth = "0.10.0"
time_calc = "0.11.0"
clap = "2.5.2"
cpal = "0.4.1"
dsp-chain = "0.12.0"
futures = "0.1.3"
crossbeam = "0.2.10"

[replace]
"bmidi:0.0.2" = { path = "../bmidi" }
